styles.css
/* ... */
.mem > .m {
  /* flex: 0.5; */
  /* display: flex;
  align-items: flex-start;
  justify-content: space-between; */
  grid-template-rows: repeat(1, 1fr);
  grid-template-columns: repeat(2, 1fr);
  display: grid;
}

.mem > .m > img {
  width: 210px;
  height: 200px;
  flex: 0.4;
  border-radius: 5px;
  box-shadow: 4px 2px 5px grey;
}

.mem > .m > .des {
  /* flex: 0.4; */
  width: calc(100% - 20px);
  height: 80%;
  /* display: flex; */
  /* flex-direction: column; */
  /* justify-content: flex-start; */
  /* align-items: flex-start; */
  text-align: left;
  margin-left: 20px;
}

.mem > .m > .des > .name {
  flex: 0.15;
  font-size: 22px;
  padding-top: 15px;
}

.mem > .m > .des > .post {
  flex: 0.1;
  color: grey;
}

.mem > .m > .des > .desc {
  flex: 0.55;
  font-size: 15px;
  color: rgb(165, 161, 161);
  font-weight: 100;
  display: flex;
  align-items: center;
}

.mem > .m > .des > .link {
  flex: 0.2;
}
.link > i {
  color: rgb(59, 159, 226);
  font-size: 15px;
}

/* Fifth Section */

.contact {
  background: url(img/panorama-3094696_1920.jpg);
  background-size: cover;
  /* height: 100vh !important; */
  /* position: relative; */
}

.contact > .main {
  /* position: absolute; */
  width: 100%;
  height: 100%;
  color: white;
  background: rgba(0, 0, 0, 0.7);
  display: flex;
  flex-direction: column;
  /* justify-content: center; */
  align-items: center;
}

.container > h1 {
  flex: 0.1;
  font-size: 2.25rem;
  /* font-size: 15px; */
}

.main > .container > p {
  flex: 0.1;
  font-size: 1.25rem;
  font-weight: 300;
  text-align: center;
  padding-bottom: 0px;
}

.container > .userForm {
  margin: 50px;
  flex: 0.5;
  padding: 40px;
  display: flex;
  /* min-height: 80%; */
  width: 100%;
  border: 1px solid transparent;
  border-radius: 5px;
  background-color: white;
}

.userForm > .form {
  width: 100%;
  /* display: flex;
  flex-direction: row;
  justify-content: space-between; */
  display: grid;
    grid-template-rows: repeat(1, 1fr);
    grid-template-columns: repeat(2, 1fr);
}

.userForm > .form > .contactus {
  flex: 0.6;
  background-color: white;
}

.userForm > .form > .info {
  flex: 0.4;
}

.contactus {
  display: flex;
  flex-direction: column;
}

.contactus > .item {
  display: flex;
}

.contactus > .item > input {
  width: 100%;
  padding: 12px 5px;
  margin: 8px 0;
  display: inline-block;
  border-top: 1px solid transparent;
  border-right: 1px solid transparent;
  border-left: 1px solid transparent;
  border-bottom: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

.contactus > .name-email {
  flex: 0.2;
  display: flex;
}

.contactus > .name-email > input {
  flex: 0.5;
  margin: 5% 5%;
}

.contactus > .subject {
  flex: 0.2;
  margin: 0 5%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.contactus > .message {
  flex: 0.3;
  margin: 0 5%;
  text-align: start;
}

.contactus > .send {
  flex: 0.3;
  margin-top: 1%;
  display: flex;
  align-items: center;
}

.send > button {
  margin: 0 5%;
  padding: 10px 25px;
  background-color: #4d55c5;
  color: white;
  border: 1px solid transparent;
  border-radius: 2px;
  font-size: 10px;
}

.info {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  justify-content: center;
}

.info > .address {
  flex: 0.2;
}

.info > .contactNo {
  flex: 0.2;
}

.info > .mail {
  flex: 0.2;
}

.info > .item > i {
  color: #4d55c5;
  margin: 10px;
}

.info > .item > p {
  color: black;
}

/* Footer Section */

.footer {
  width: 100%;
  height: 15vh;
  display: flex;
  flex-direction: column;
}

.footer > .socialIcons {
  flex: 0.6;
  background-color: #4d55c5;
  display: flex;
  align-items: center;
  justify-content: center;
}

.footer > .socialIcons > i {
  font-size: 18px;
  padding: 0 15px;
  color: white;
}

.footer > .copy {
  flex: 0.5;
  background-color: #2e348d;
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
}
 
@media (max-width: 767px) {
  .topbarOption {
    display: none;
  }

  .tiles {
  grid-template-rows: repeat(2, 1fr);
  grid-template-columns: repeat(2, 1fr);
  }
  .about__blocks {
    grid-template-rows: repeat(3, 1fr);
    grid-template-columns: repeat(1, 1fr);
  }
  .projectDesc {
    grid-template-rows: repeat(2, 1fr);
    grid-template-columns: repeat(1, 1fr);
  }
  .projectDesc > img {
    margin-left: 40px;
  }
  .price__tiles {
    grid-template-rows: repeat(3, 1fr);
  grid-template-columns: repeat(1, 1fr);
  }

  .container > .members__row {
    grid-template-rows: repeat(2, 1fr);
    grid-template-columns: repeat(1, 1fr);
  }

  .mem > .m {
    margin-bottom: 20px;
    
  }
  .introBox > .intro {
    font-size: 12px;
    width: 300px;
    grid-column-start: 3;
    grid-row-start: 2;
    grid-column-end: 4;
    grid-row-end: 4;
  }
  .intro > .buttons > button {
    padding: 10px;
  }
}

@media (max-width: 540px) {
  .tiles {
  grid-template-rows: repeat(4, 1fr);
  grid-template-columns: repeat(1, 1fr);
  }

  .mem > .m {
    grid-template-rows: repeat(2, 1fr);
  grid-template-columns: repeat(1, 1fr);
  }

  .projectDesc > img {
    margin-left: 0px;
  }

  .userForm > .form {
    grid-template-rows: repeat(2, 1fr);
    grid-template-columns: repeat(1, 1fr);
  }
}

